@@ -115,8 +115,6 @@ void WHCgiPage::setStyleSheet(const QString &str)
 
 void WHCgiPage::renderHead()
 {
-  time_t t=time(NULL);
-
   printf("Content-type: %s\n",(const char *)page_mime_type.toUtf8());
   printf("\n");
   printf("<!doctype html>\n");
@@ -124,15 +122,12 @@ void WHCgiPage::renderHead()
   printf("<head>\n");
   printf("<title>%s</title>\n",(const char *)page_title_text.toUtf8());
   printf("<meta content=\"text/html; charset=utf-8\" http-equiv=Content-Type>\n");
-  for(int i=0;i<page_scripts.size();i++) {
-    printf("<script type=\"text/javascript\" src=\"%s?%lu\"></script>\n",
-	   (const char *)page_scripts[i].toUtf8(),t);
-  }
-  printf("<style>\n");
+  renderScripts();
 
   //
   // Main Document Style
   //
+  printf("<style>\n");
   QString style=QString("body {")+
     "background-color: "+settings()->backgroundColor()+";}";
   style+=QString("a:active {")+
@@ -170,6 +165,17 @@ void WHCgiPage::renderHead()
   printf("%s\n",(const char *)style.toUtf8());
   printf("</style>\n");
   printf("</head>\n");
+}
+
+
+void WHCgiPage::renderScripts()
+{
+  time_t t=time(NULL);
+
+  for(int i=0;i<page_scripts.size();i++) {
+    printf("<script type=\"text/javascript\" src=\"%s?%lu\"></script>\n",
+	   (const char *)page_scripts[i].toUtf8(),t);
+  }
 }
 
 
