@@ -330,3 +330,5 @@
 2016-10-22 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the library version to 6:1:3.
 	* Incremented the package version to 1.2.1.
+2017-03-26 Fred Gleason <fredg@paravelsystems.com>
+	* Added a 'WHCgiPage::renderScripts() method.
